syntax = "proto3";

package telemetry.service.collector;

import "google/protobuf/empty.proto";
import "telemetry/messages/sensor_event.proto";
import "telemetry/messages/hub_event.proto";

option java_package = "ru.yandex.practicum.telemetry.collector";

service CollectorController {
  rpc CollectSensorEvent (telemetry.messages.SensorEventProto)
      returns (google.protobuf.Empty);

  rpc CollectHubEvent (telemetry.messages.HubEventProto)
      returns (google.protobuf.Empty);
}